Fix issue of icon overlapping text on sidenav

--- a/src/assets/stylesheets/_components/_sidenav.scss
+++ b/src/assets/stylesheets/_components/_sidenav.scss
@@ -1,5 +1,5 @@
 .va-sidebarnav {
-  $padding-override: 10px 16px 10px 12px;
+  $padding-override: 10px 40px 10px 12px;
   margin: 2.5rem 0 0 2.5rem;
   background-color: var(--vads-color-white);
 
